--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sdk-miniapp-vv",
-  "version": "1.1.8",
+  "version": "1.2.2",
   "description": "sdk-miniapp test",
   "main": "lib/index.js",
   "author": "vv",
@@ -31,6 +31,7 @@
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-inject-process-env": "^1.3.1",
     "rollup-plugin-typescript2": "^0.31.1",
+    "rollup-plugin-uglify": "^6.0.4",
     "typescript": "^4.5.2"
   },
   "keywords": []
