--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sdk-miniapp-vv",
-  "version": "1.2.2",
-  "description": "sdk-miniapp test",
-  "main": "lib/index.js",
+  "version": "1.2.3",
+  "description": "",
+  "main": "lib/index.min.js",
   "author": "vv",
   "license": "MIT",
   "types": "lib/index.d.ts",
